// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateShadowNodeCpp can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ArrayPropsNativeComponentViewComponentName[] = \\"ArrayPropsNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char BooleanPropNativeComponentViewComponentName[] = \\"BooleanPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ColorPropNativeComponentViewComponentName[] = \\"ColorPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'DimensionPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char DimensionPropNativeComponentViewComponentName[] = \\"DimensionPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EdgeInsetsPropNativeComponentViewComponentName[] = \\"EdgeInsetsPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EnumPropNativeComponentViewComponentName[] = \\"EnumPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EventNestedObjectPropsNativeComponentViewComponentName[] = \\"EventNestedObjectPropsNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EventPropsNativeComponentViewComponentName[] = \\"EventPropsNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char FloatPropsNativeComponentViewComponentName[] = \\"FloatPropsNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ImagePropNativeComponentViewComponentName[] = \\"ImagePropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char IntegerPropNativeComponentViewComponentName[] = \\"IntegerPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char MultiNativePropNativeComponentViewComponentName[] = \\"MultiNativePropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char NoPropsNoEventsNativeComponentViewComponentName[] = \\"NoPropsNoEventsNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ObjectPropsNativeComponentComponentName[] = \\"ObjectPropsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char PointPropNativeComponentViewComponentName[] = \\"PointPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char StringPropNativeComponentViewComponentName[] = \\"StringPropNativeComponentView\\";

} // namespace react
} // namespace facebook
",
}
`;
